fixed navigation main header font size since it was too small

--- a/css/index.css
+++ b/css/index.css
@@ -179,8 +179,8 @@ nav .nav {
     width: 80%;
   }
 }
-nav h2 {
-  font-size: 3rem;
+nav h1 {
+  font-size: 3.5rem;
   margin: 20px 0;
 }
 nav .navigation {
@@ -271,15 +271,63 @@ footer {
 .home .walk .walk-text {
   width: 50%;
 }
+@media only screen and (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+  }
+}
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
+}
+@media only screen and (max-width: 500px) {
+  .home .walk .walk-text h3 {
+    margin-top: 20px;
+  }
 }
 .home .walk .walk-text p {
   margin-bottom: 26px;
 }
+.home .walk .walk-text .btn {
+  height: 50px;
+  width: 100px;
+  color: white;
+  font-size: 1.8rem;
+  background-color: #22283A;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.home .walk .walk-text .btn:hover {
+  background-color: white;
+  color: #22283A;
+}
+@media only screen and (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    height: 70px;
+    width: 100%;
+    color: white;
+    font-size: 1.8rem;
+    background-color: #22283A;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .home .walk .walk-text .btn:hover {
+    background-color: white;
+    color: #22283A;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media only screen and (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 100%;
+    margin: 9 auto;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
