--- a/less/home-page.less
+++ b/less/home-page.less
@@ -80,8 +80,16 @@
     .walk-text {
       width: 50%;
 
+      @media @phone {
+        width: 100%;
+      }
+
       h3 {
         margin-bottom: 10px;
+
+        @media @phone {
+          margin-top: 20px;
+        }
       }
 
       p {
@@ -89,12 +97,22 @@
       }
 
       .btn {
+        .button(50px, 100px);
+
+        @media @phone {
+          .button(70px, 100%);
+        }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @phone {
+        width: 100%;
+        margin: 9 auto;
+      }
       
       img {
         width: 100%;
