--- a/less/navigation.less
+++ b/less/navigation.less
@@ -16,8 +16,8 @@ nav {
         width: 80%;
     }
 
-    h2 {
-        font-size: 3rem;
+    h1 {
+        font-size: 3.5rem;
         margin: 20px 0;
     }
 
